--- a/serverless.yml
+++ b/serverless.yml
@@ -1,4 +1,4 @@
-org: jhooganpachacutec
+org: jhoganpachacutec
 service: api-s3
 
 provider:
@@ -25,6 +25,31 @@ functions:
     events:
       - http:
           path: /s3/bucket/lista-objetos
+          method: post
+          cors: true
+          integration: lambda
+  crear_bucket:
+    handler: crear_bucket.lambda_handler
+    events:
+      - http:
+          path: /s3/crear_bucket
+          method: post
+          cors: true
+          integration: lambda
+  crear_directorio:
+    handler: crear_directorio.lambda_handler
+    events:
+      - http:
+          path: /s3/bucket/crear_directorio
+          method: post
+          cors: true
+          integration: lambda
+  subir_archivo:
+    handler: subir_archivo.lambda_handler
+    memorySize: 512
+    events:
+      - http:
+          path: /s3/bucket/subir_archivo
           method: post
           cors: true
           integration: lambda
